fixed font sizes on mobile

--- a/stylesheets/sass/screen.scss
+++ b/stylesheets/sass/screen.scss
@@ -108,7 +108,7 @@ h1.title {
 	padding: 0;
 	overflow: hidden;
 	@include media($mobile) {
-		font-size: 4vw;
+		font-size: 4.5vw;
 	}
 	span {
 		color: #5D5D5D;
@@ -145,15 +145,15 @@ p {
 		margin: 0.8em 0.8em 0.3em;
 		padding: 0;
 		@include media($mobile) {
-			font-size: 3vw;
+			font-size: 4vw;
 		}
 	}
 	p {
 		font-size: 1.5vw;
-		margin: 0.3em 0.8em 0.5em;
+		margin: 0.3em 0.8em 0.8em;
 		padding: 0;
 		@include media($mobile) {
-			font-size: 3vw;
+			font-size: 4vw;
 		}
 	}
 }
@@ -170,7 +170,7 @@ p {
 			font-size: 1.3vw;
 			margin-top: 0.6vw;
 			@include media($mobile) {
-				font-size: 3vw;
+				font-size: 4vw;
 			}
 		}
 		h2 {
@@ -178,7 +178,7 @@ p {
 			margin-bottom: 0;
 			font-size: 1.5vw;
 			@include media($mobile) {
-				font-size: 3vw;
+				font-size: 4vw;
 			}
 		}
 		a {
@@ -244,7 +244,7 @@ p {
 			}
 			@include media($mobile) {
 				padding: 0 1vw 0 3vw;
-				font-size: 3vw;
+				font-size: 4vw;
 				background-size: 12px 8px;
 			}
 			.quotation {
@@ -283,7 +283,7 @@ p {
 				display: block;
 				bottom: auto;
 				left: auto;
-				padding: 0 0 1.5vw 3vw;
+				padding: 0 0 3vw 3vw;
 			}
 			span {
 				color: #949494;
